# kf-gins-ros

./: README.md
data2bag/: GNSS-RTK.txt
data2bag/src/: CMakeLists.txt  data2bag.cpp  package.xml
kf_gins_ros/: CMakeLists.txt  gins.cpp  package.xml
kf_gins_ros/config/: gins.yaml  gins_rviz_config.rviz
kf_gins_ros/gins/: INSMechan.cpp  INSMechan.h  basictype.h  earth.h  gins_engine.cpp  gins_engine.h  parameters.cpp  parameters.h  rotation.h  visualization.cpp  visualization.h
kf_gins_ros/launch/: gins_rviz.launch
